crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/001.cypher
MATCH (n) RETURN n; DROP ALL
